--- a/challenge_1/public/index.html
+++ b/challenge_1/public/index.html
@@ -1,2 +1,10 @@
-
-
+<!doctype html>
+<html>
+  <head>
+    <title>Historical Events Finder</title>
+  </head>
+  <body>
+    <div id="app"></div>
+    <script src="./app.js"></script>
+  </body>
+</html>
