--- a/challenge_1/public/index.html
+++ b/challenge_1/public/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Historical Events Finder</title>
+    <link href="./styles.css" rel="stylesheet">
   </head>
   <body>
     <div id="app"></div>
