Credit coindesk for api usage

--- a/challenge_2/public/index.html
+++ b/challenge_2/public/index.html
@@ -5,6 +5,7 @@
  </head>
  <body>
    <div id="app"></div>
+   <div>Powered by <a href="https://www.coindesk.com/price/bitcoin">CoinDesk</a></div>
     <script src="./main.js"></script>
  </body>
 </html>
